--- a/views/index.pug
+++ b/views/index.pug
@@ -5,3 +5,4 @@ block content
   p Welcome to #{title}
   p This is a Node Application that has been containerized with Docker!
   p running on OpenShift!!
+  p ArgoCD automatically managed
